# external-libraries/openapi/models/LoginResponse.ts
@@ -1,0 +1,35 @@
+/**
+ * School API
+ * School API
+ *
+ * OpenAPI spec version: 1.0.3
+ * Contact: orscarsilla@outlook.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+export class LoginResponse {
+    'token': string;
+
+    static readonly discriminator: string | undefined = undefined;
+
+    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
+        {
+            "name": "token",
+            "baseName": "token",
+            "type": "string",
+            "format": "string"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return LoginResponse.attributeTypeMap;
+    }
+
+    public constructor() {
+    }
+}
+
